--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"node-sass": "^6.0.1",
+		"prop-types": "^15.7.2",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
-		"react-scripts": "4.0.3"
+		"react-scripts": "4.0.3",
+		"sass": "^1.43.4",
+		"sass-loader": "^12.3.0"
 	},
 	"scripts": {
 		"start": "react-scripts start",
