--- a/package.json
+++ b/package.json
@@ -1,27 +1,14 @@
 {
 	"name": "reactor",
 	"version": "0.1.0",
-	"private": true,
-	"dependencies": {
-		"classnames": "^2.3.1",
-		"node-sass": "^6.0.1",
-		"prop-types": "^15.7.2",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
-		"react-scripts": "4.0.3",
-		"sass": "^1.43.4",
-		"sass-loader": "^12.3.0"
-	},
+	"license": "UNLICENSED",
+	"type": "module",
 	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"eject": "react-scripts eject"
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
+		"dev": "cross-env webpack --mode=development",
+		"start": "cross-env webpack serve --open --mode=development",
+		"build": "cross-env webpack --mode=production",
+		"lint": "eslint ./src",
+		"lint:fix": "eslint ./src --fix"
 	},
 	"browserslist": {
 		"production": [
@@ -34,5 +21,28 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"cross-env": "^7.0.3",
+		"css-loader": "^6.7.1",
+		"eslint": "^8.12.0",
+		"eslint-config-airbnb": "^19.0.4",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-html": "^6.2.0",
+		"eslint-plugin-import": "^2.25.4",
+		"eslint-plugin-jsx-a11y": "^6.5.1",
+		"eslint-plugin-prettier": "^4.0.0",
+		"html-webpack-plugin": "^5.5.0",
+		"mini-css-extract-plugin": "^2.6.0",
+		"postcss": "^8.4.12",
+		"postcss-loader": "^6.2.1",
+		"postcss-preset-env": "^7.4.3",
+		"prettier": "^2.6.1",
+		"sass": "^1.49.11",
+		"sass-loader": "^12.6.0",
+		"style-loader": "^3.3.1",
+		"webpack": "^5.71.0",
+		"webpack-cli": "^4.9.2",
+		"webpack-dev-server": "^4.7.4"
 	}
 }
