--- a/package.json
+++ b/package.json
@@ -41,6 +41,11 @@
 		"sass": "^1.49.11",
 		"sass-loader": "^12.6.0",
 		"style-loader": "^3.3.1",
+		"stylelint": "^14.6.1",
+		"stylelint-config-recommended-scss": "^6.0.0",
+		"stylelint-declaration-block-no-ignored-properties": "^2.5.0",
+		"stylelint-order": "^5.0.0",
+		"stylelint-scss": "^4.2.0",
 		"webpack": "^5.71.0",
 		"webpack-cli": "^4.9.2",
 		"webpack-dev-server": "^4.7.4"
