--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
 		"eslint-plugin-import": "^2.25.4",
 		"eslint-plugin-jsx-a11y": "^6.5.1",
 		"eslint-plugin-prettier": "^4.0.0",
+		"eslint-plugin-react": "^7.29.4",
 		"html-webpack-plugin": "^5.5.0",
 		"mini-css-extract-plugin": "^2.6.0",
 		"postcss": "^8.4.12",
 		"postcss-loader": "^6.2.1",
 		"postcss-preset-env": "^7.4.3",
 		"prettier": "^2.6.1",
+		"react-svg-loader": "^3.0.3",
 		"sass": "^1.49.11",
 		"sass-loader": "^12.6.0",
 		"style-loader": "^3.3.1",
@@ -46,8 +48,21 @@
 		"stylelint-declaration-block-no-ignored-properties": "^2.5.0",
 		"stylelint-order": "^5.0.0",
 		"stylelint-scss": "^4.2.0",
+		"url-loader": "^4.1.1",
 		"webpack": "^5.71.0",
 		"webpack-cli": "^4.9.2",
 		"webpack-dev-server": "^4.7.4"
+	},
+	"dependencies": {
+		"@babel/core": "^7.17.8",
+		"@babel/plugin-syntax-jsx": "^7.16.7",
+		"@babel/preset-env": "^7.16.11",
+		"@babel/preset-react": "^7.16.7",
+		"babel-loader": "^8.2.4",
+		"classnames": "^2.3.1",
+		"prop-types": "^15.8.1",
+		"react": "^18.0.0",
+		"react-dom": "^18.0.0",
+		"react-image": "^4.0.3"
 	}
 }
