--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,8 @@
 {
-	"extends": ["airbnb/base"],
+	"extends": [
+		"plugin:react/recommended",
+		"airbnb/base"
+	],
 	"rules": {
 		"arrow-body-style": "off",
 		"indent": ["error", "tab"],
