--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
 		"prop-types": "^15.8.1",
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
-		"react-image": "^4.0.3"
+		"react-image": "^4.0.3",
+		"react-router-dom": "^6.3.0"
 	}
 }
