--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
 		"indent": ["error", "tab"],
 		"max-len": ["error", 120],
 		"no-console": "off",
-		"no-tabs": "off"
+		"no-tabs": "off",
+		"space-in-parens": ["error", "always"]
 	}
 }
