--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"postcss-preset-env": "^7.4.3",
 		"prettier": "^2.6.1",
 		"react-svg-loader": "^3.0.3",
+		"resolve-url-loader": "^5.0.0",
 		"sass": "^1.49.11",
 		"sass-loader": "^12.6.0",
 		"style-loader": "^3.3.1",
