--- a/package.json
+++ b/package.json
@@ -10,6 +10,16 @@
 		"lint": "eslint ./src",
 		"lint:fix": "eslint ./src --fix"
 	},
+	"lint-staged": {
+		"*.{ts,js,jsx}": [
+			"prettier . --write",
+			"eslint"
+		],
+		"*.{scss,css}": [
+			"prettier . --write",
+			"stylelint"
+		]
+	},
 	"browserslist": {
 		"production": [
 			">0.2%",
@@ -45,9 +55,11 @@
 		"sass-loader": "^12.6.0",
 		"style-loader": "^3.3.1",
 		"stylelint": "^14.6.1",
+		"stylelint-config-prettier": "^9.0.3",
 		"stylelint-config-recommended-scss": "^6.0.0",
 		"stylelint-declaration-block-no-ignored-properties": "^2.5.0",
 		"stylelint-order": "^5.0.0",
+		"stylelint-prettier": "^2.0.0",
 		"stylelint-scss": "^4.2.0",
 		"url-loader": "^4.1.1",
 		"webpack": "^5.71.0",
