--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
 	"singleQuote": true,
 	"tabWidth": 4,
 	"trailingComma": "es5",
-	"endOfLine": "lf"
+	"endOfLine": "lf",
+	"proseWrap": "always"
 }
