--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,8 @@
 	},
 	"extends": [
 		"plugin:react/recommended",
-		"airbnb/base"
+		"airbnb/base",
+		"prettier"
 	],
 	"rules": {
 		"arrow-body-style": "off",
