--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
 	"rules": {
 		"arrow-body-style": "off",
 		"class-methods-use-this": "off",
+		"import/extensions": "off",
 		"import/prefer-default-export": "off",
 		"indent": ["error", "tab"],
 		"max-len": ["error", 120],
