--- a/.eslintrc
+++ b/.eslintrc
@@ -1,22 +1,28 @@
 {
 	"env": {
 		"browser": true,
-		"es6": true
+		"es6": true,
+		"node": true
 	},
 	"extends": [
-		"plugin:react/recommended",
-		"airbnb/base",
-		"prettier"
+		"plugin:react/jsx-runtime",
+		"plugin:prettier/recommended"
 	],
+	"parserOptions": {
+		"ecmaFeatures": {
+			"jsx": true
+		},
+		"ecmaVersion": 13,
+		"sourceType": "module"
+	},
 	"rules": {
-		"arrow-body-style": "off",
+		"arrow-body-style": ["error", "always"],
 		"class-methods-use-this": "off",
 		"import/extensions": "off",
 		"import/prefer-default-export": "off",
 		"indent": ["error", "tab"],
-		"max-len": ["error", 120],
 		"no-console": "off",
-		"no-tabs": "off",
-		"space-in-parens": ["error", "always"]
+		"no-param-reassign": "error",
+		"no-tabs": "off"
 	}
 }
