--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,5 @@
 	"singleQuote": true,
 	"tabWidth": 4,
 	"trailingComma": "es5",
-	"endOfLine": "lf",
-	"proseWrap": "always"
+	"endOfLine": "lf"
 }
