--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,96 +1,9 @@
 {
-	"plugins": [
-		"stylelint-scss",
-		"stylelint-order",
-		"stylelint-declaration-block-no-ignored-properties"
+	"extends": [
+		"stylelint-config-standard-scss",
+		"stylelint-scss"
 	],
 	"rules": {
-		"order/order": [
-			"custom-properties",
-			"dollar-variables",
-			{
-				"type": "at-rule",
-				"name": "include",
-				"hasBlock": false
-			},
-			"declarations",
-			{
-				"type": "rule",
-				"selector": "&::before"
-			},
-			{
-				"type": "rule",
-				"selector": "&::after"
-			},
-			"rules",
-			{
-				"type": "rule",
-				"selector": "&:link"
-			},
-			{
-				"type": "rule",
-				"selector": "&:visited"
-			},
-			{
-				"type": "rule",
-				"selector": "&:focus"
-			},
-			{
-				"type": "rule",
-				"selector": "&:hover"
-			},
-			{
-				"type": "rule",
-				"selector": "&:active"
-			},
-			{
-				"type": "rule",
-				"selector": "&:disabled"
-			},
-			{
-				"type": "rule",
-				"selector": "&:first-child"
-			},
-			{
-				"type": "rule",
-				"selector": "&:last-child"
-			},
-			{
-				"type": "rule",
-				"selector": "&:nth-child.+"
-			},
-			{
-				"type": "rule",
-				"selector": "&\\[[^\\[\\]]+\\]"
-			},
-			{
-				"type": "rule",
-				"selector": "&\\..+"
-			},
-			{
-				"type": "rule",
-				"selector": "&--.+"
-			},
-			{
-				"type": "rule",
-				"selector": ".* &"
-			},
-			{
-				"type": "at-rule",
-				"name": "include",
-				"hasBlock": true
-			},
-			"at-rules"
-		],
-		"order/properties-alphabetical-order": null,
-		"order/properties-order": [
-			[
-				"all"
-			],
-			{
-				"unspecified": "bottomAlphabetical"
-			}
-		],
 		"at-rule-empty-line-before": [
 			"always",
 			{
@@ -137,7 +50,7 @@
 		"block-opening-brace-space-after": "always-single-line",
 		"block-opening-brace-space-before": "always",
 		"color-hex-case": "lower",
-		"color-hex-length": "short",
+		"color-hex-length": "long",
 		"color-named": "never",
 		"color-no-hex": null,
 		"color-no-invalid-hex": true,
@@ -173,7 +86,22 @@
 		"declaration-bang-space-after": "never",
 		"declaration-bang-space-before": "always",
 		"declaration-block-no-duplicate-properties": true,
-		"declaration-block-no-redundant-longhand-properties": true,
+		"declaration-block-no-redundant-longhand-properties": [
+			true,
+			{
+				"ignoreShorthands": [
+					"/animation/",
+					"/background/",
+					"/border/",
+					"/column/",
+					"/flex/",
+					"/font/",
+					"/grid/",
+					"/text/",
+					"/transition/"
+				]
+			}
+		],
 		"declaration-block-no-shorthand-property-overrides": true,
 		"declaration-block-semicolon-newline-after": "always-multi-line",
 		"declaration-block-semicolon-newline-before": "never-multi-line",
@@ -213,12 +141,13 @@
 		"function-comma-space-before": "never",
 		"function-linear-gradient-no-nonstandard-direction": true,
 		"function-max-empty-lines": 0,
-		"function-name-case": "lower",
+		"function-name-case": null,
 		"function-parentheses-newline-inside": "always-multi-line",
 		"function-parentheses-space-inside": "never-single-line",
 		"function-url-no-scheme-relative": true,
 		"function-url-quotes": "always",
 		"function-whitespace-after": "always",
+		"indentation": "tab",
 		"keyframe-declaration-no-important": true,
 		"length-zero-no-unit": true,
 		"max-empty-lines": 1,
@@ -227,7 +156,14 @@
 		"media-feature-colon-space-after": "always",
 		"media-feature-colon-space-before": "never",
 		"media-feature-name-case": "lower",
-		"media-feature-name-no-unknown": true,
+		"media-feature-name-no-unknown": [
+			true,
+			{
+				"ignoreMediaFeatureNames": [
+					"/media/"
+				]
+			}
+		],
 		"media-feature-name-no-vendor-prefix": true,
 		"media-feature-parentheses-space-inside": "never",
 		"media-feature-range-operator-space-after": "always",
@@ -306,7 +242,7 @@
 		"selector-type-no-unknown": true,
 		"shorthand-property-no-redundant-values": true,
 		"string-no-newline": true,
-		"string-quotes": "double",
+		"string-quotes": "single",
 		"time-min-milliseconds": 10,
 		"unit-case": "lower",
 		"unit-no-unknown": true,
@@ -315,7 +251,7 @@
 		"value-list-comma-newline-before": "never-multi-line",
 		"value-list-comma-space-after": "always-single-line",
 		"value-list-comma-space-before": "never",
-		"value-list-max-empty-lines": 0,
+		"value-list-max-empty-lines": 1,
 		"value-no-vendor-prefix": true,
 		"scss/at-else-closing-brace-newline-after": "always-last-in-chain",
 		"scss/at-else-closing-brace-space-after": "always-intermediate",
@@ -373,12 +309,6 @@
 		"scss/operator-no-unspaced": true,
 		"scss/partial-no-import": null,
 		"scss/percent-placeholder-pattern": null,
-		"scss/selector-no-redundant-nesting-selector": true,
-		"plugin/declaration-block-no-ignored-properties": [
-			true,
-			{
-				"severity": "warning"
-			}
-		]
+		"scss/selector-no-redundant-nesting-selector": true
 	}
 }
