--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
 		"start": "cross-env webpack serve --open --mode=development",
 		"build": "cross-env webpack --mode=production",
 		"lint": "eslint ./config ./src ./src/**/*.jsx",
-		"lint:fix": "eslint ./config ./src ./src/**/*.jsx --fix"
+		"lint:fix": "eslint ./config ./src ./src/**/*.jsx --fix",
+		"stylelint": "stylelint ./src/**/*.scss",
+		"stylelint:fix": "stylelint ./src/**/*.scss --fix"
 	},
 	"lint-staged": {
 		"*.{ts,js,jsx}": [
@@ -57,6 +59,8 @@
 		"stylelint": "^14.6.1",
 		"stylelint-config-prettier": "^9.0.3",
 		"stylelint-config-recommended-scss": "^6.0.0",
+		"stylelint-config-standard": "^25.0.0",
+		"stylelint-config-standard-scss": "^3.0.0",
 		"stylelint-declaration-block-no-ignored-properties": "^2.5.0",
 		"stylelint-order": "^5.0.0",
 		"stylelint-prettier": "^2.0.0",
