--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
 		"babel-loader": "^8.2.4",
 		"classnames": "^2.3.1",
 		"lodash": "^4.17.21",
+		"npm": "^8.8.0",
 		"prop-types": "^15.8.1",
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
