--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
 		"@babel/plugin-syntax-jsx": "^7.16.7",
 		"@babel/preset-env": "^7.16.11",
 		"@babel/preset-react": "^7.16.7",
+		"@reduxjs/toolkit": "^1.8.1",
 		"babel-loader": "^8.2.4",
 		"classnames": "^2.3.1",
 		"lodash": "^4.17.21",
@@ -84,6 +85,8 @@
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
 		"react-image": "^4.0.3",
-		"react-router-dom": "^6.3.0"
+		"react-redux": "^8.0.1",
+		"react-router-dom": "^6.3.0",
+		"react-transition-group": "^4.4.2"
 	}
 }
