--- a/.eslintrc
+++ b/.eslintrc
@@ -4,10 +4,11 @@
 		"es6": true,
 		"node": true
 	},
+
 	"extends": [
-		"plugin:react/jsx-runtime",
-		"plugin:prettier/recommended"
+		"plugin:react/jsx-runtime"
 	],
+
 	"parserOptions": {
 		"ecmaFeatures": {
 			"jsx": true
@@ -15,14 +16,107 @@
 		"ecmaVersion": "latest",
 		"sourceType": "module"
 	},
+
 	"rules": {
-		"arrow-body-style": ["error", "always"],
+		"arrow-body-style": [
+			"error",
+			"always"
+		],
+		"arrow-parens": [
+			"error",
+			"always"
+		],
+		"brace-style": "error",
+		"comma-dangle": [
+			"error",
+			{
+				"arrays": "only-multiline",
+				"objects": "only-multiline",
+				"imports": "never",
+				"exports": "never",
+				"functions": "never"
+			}
+		],
 		"class-methods-use-this": "off",
 		"import/extensions": "off",
 		"import/prefer-default-export": "off",
-		"indent": ["error", "tab", { "SwitchCase": 1 }],
+		"multiline-ternary": [
+			"error",
+			"always"
+		],
+		"newline-before-return": "error",
 		"no-console": "off",
+		"no-multiple-empty-lines": [
+			"error",
+			{
+				"max": 1,
+				"maxEOF": 0
+			}
+		],
 		"no-param-reassign": "error",
-		"no-tabs": "off"
+		"no-trailing-spaces": "error",
+		"object-curly-newline": [
+			"error",
+			{
+				"ObjectExpression": {
+					"multiline": true,
+					"minProperties": 2
+				},
+				"ObjectPattern": {
+					"multiline": true,
+					"minProperties": 2
+				},
+				"ImportDeclaration": "never",
+				"ExportDeclaration": {
+					"multiline": true,
+					"minProperties": 3
+				}
+			}
+		],
+		"quotes": [
+			"error",
+			"single"
+		],
+
+		// Indentation
+		"indent": [
+			"error",
+			"tab",
+			{
+				"SwitchCase": 1
+			}
+		],
+		"no-tabs": "off",
+
+		// Spacings
+		"array-bracket-spacing": [
+			"error",
+			"always"
+		],
+		"no-multi-spaces": [
+			"error",
+			{
+				"ignoreEOLComments": false
+			}
+		],
+		"object-curly-spacing": [
+			"error",
+			"always"
+		],
+		"space-in-parens": [
+			"error",
+			"always"
+		],
+		"space-before-function-paren": [
+			"error",
+			"never"
+		],
+
+		// React
+		"react/jsx-curly-spacing": [
+			"error",
+			"always"
+		],
+		"react/self-closing-comp": "error"
 	}
 }
