--- a/package.json
+++ b/package.json
@@ -38,8 +38,6 @@
 		"cross-env": "^7.0.3",
 		"css-loader": "^6.7.1",
 		"eslint": "^8.12.0",
-		"eslint-config-airbnb": "^19.0.4",
-		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-html": "^6.2.0",
 		"eslint-plugin-import": "^2.25.4",
 		"eslint-plugin-jsx-a11y": "^6.5.1",
@@ -48,9 +46,6 @@
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.5.0",
 		"mini-css-extract-plugin": "^2.6.0",
-		"postcss": "^8.4.12",
-		"postcss-loader": "^6.2.1",
-		"postcss-preset-env": "^7.4.3",
 		"prettier": "^2.6.1",
 		"react-svg-loader": "^3.0.3",
 		"resolve-url-loader": "^5.0.0",
@@ -81,13 +76,11 @@
 		"classnames": "^2.3.1",
 		"history": "^5.3.0",
 		"lodash": "^4.17.21",
-		"npm": "^8.8.0",
 		"prop-types": "^15.8.1",
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
 		"react-image": "^4.0.3",
 		"react-redux": "^8.0.1",
-		"react-router-dom": "^6.3.0",
-		"react-transition-group": "^4.4.2"
+		"react-router-dom": "^6.3.0"
 	}
 }
