--- a/.stylelintrc
+++ b/.stylelintrc
@@ -302,7 +302,7 @@
 			}
 		],
 		"scss/double-slash-comment-inline": null,
-		"scss/double-slash-comment-whitespace-inside": "always",
+		"scss/double-slash-comment-whitespace-inside": null,
 		"scss/media-feature-value-dollar-variable": null,
 		"scss/operator-no-newline-after": null,
 		"scss/operator-no-newline-before": null,
