--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.5.0",
 		"mini-css-extract-plugin": "^2.6.0",
+		"node-sass-json-importer": "^4.3.0",
 		"prettier": "^2.6.1",
 		"react-svg-loader": "^3.0.3",
 		"resolve-url-loader": "^5.0.0",
@@ -80,6 +81,7 @@
 		"react-dom": "^18.0.0",
 		"react-image": "^4.0.3",
 		"react-redux": "^8.0.1",
+		"react-responsive": "^9.0.0-beta.10",
 		"react-router-dom": "^6.3.0"
 	}
 }
