--- a/.stylelintrc
+++ b/.stylelintrc
@@ -125,12 +125,7 @@
 				]
 			}
 		],
-		"declaration-no-important": [
-			true,
-			{
-				"severity": "warning"
-			}
-		],
+		"declaration-no-important": null,
 		"font-family-name-quotes": "always-unless-keyword",
 		"font-family-no-duplicate-names": true,
 		"font-weight-notation": "numeric",
@@ -155,7 +150,7 @@
 		"max-nesting-depth": null,
 		"media-feature-colon-space-after": "always",
 		"media-feature-colon-space-before": "never",
-		"media-feature-name-case": "lower",
+		"media-feature-name-case": null,
 		"media-feature-name-no-unknown": [
 			true,
 			{
