--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"eslint-plugin-html": "^6.2.0",
 		"eslint-plugin-import": "^2.25.4",
 		"eslint-plugin-jsx-a11y": "^6.5.1",
+		"eslint-plugin-newline-destructuring": "^1.0.1",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-react": "^7.29.4",
 		"file-loader": "^6.2.0",
