--- a/.eslintrc
+++ b/.eslintrc
@@ -79,7 +79,7 @@
 				},
 				"ImportDeclaration": {
 					"multiline": true,
-					"minProperties": 2
+					"minProperties": 4
 				},
 				"ExportDeclaration": {
 					"multiline": true,
@@ -87,7 +87,12 @@
 				}
 			}
 		],
-		"object-property-newline": "error",
+		"object-property-newline": [
+			"error",
+			{
+				"allowAllPropertiesOnSameLine": false
+			}
+		],
 		"quotes": [
 			"error",
 			"single"
