--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
 		"react-image": "^4.0.3",
 		"react-redux": "^8.0.1",
 		"react-responsive": "^9.0.0-beta.10",
-		"react-router-dom": "^6.3.0"
+		"react-router-dom": "^6.3.0",
+		"react-transition-group": "^4.4.2"
 	}
 }
