--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
 	"scripts": {
 		"dev": "cross-env webpack serve --open --mode=development",
 		"build": "cross-env webpack --mode=production",
-		"lint": "eslint ./config ./src ./src/**/*.jsx",
-		"lint:fix": "eslint ./config ./src ./src/**/*.jsx --fix",
+		"lint": "eslint ./config/**/*.jsx  ./src ./src/**/*.jsx",
+		"lint:fix": "eslint ./config/**/*.jsx  ./src ./src/**/*.jsx --fix",
 		"stylelint": "stylelint ./src/**/*.scss",
 		"stylelint:fix": "stylelint ./src/**/*.scss --fix"
 	},
