--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
 		"node-sass-json-importer": "^4.3.0",
 		"prettier": "^2.6.1",
 		"react-svg-loader": "^3.0.3",
-		"resolve-url-loader": "^5.0.0",
 		"sass": "^1.49.11",
 		"sass-loader": "^12.6.0",
 		"style-loader": "^3.3.1",
@@ -81,9 +80,7 @@
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
 		"react-image": "^4.0.3",
-		"react-redux": "^8.0.1",
 		"react-responsive": "^9.0.0-beta.10",
-		"react-router-dom": "^6.3.0",
-		"react-transition-group": "^4.4.2"
+		"react-router-dom": "^6.3.0"
 	}
 }
