--- a/.eslintrc
+++ b/.eslintrc
@@ -127,10 +127,6 @@
 			"error",
 			"always"
 		],
-		"space-before-function-paren": [
-			"error",
-			"never"
-		],
 		"template-curly-spacing": [
 			"error",
 			"always"
@@ -145,6 +141,11 @@
 			}
 		],
 		"react/self-closing-comp": "error",
-		"react/jsx-max-props-per-line": [1, { "maximum": 1 }]
+		"react/jsx-max-props-per-line": [
+			1,
+			{
+				"maximum": 1
+			}
+		]
 	}
 }
