--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"stylelint-order": "^5.0.0",
 		"stylelint-prettier": "^2.0.0",
 		"stylelint-scss": "^4.2.0",
+		"typescript": "^4.7.4",
 		"url-loader": "^4.1.1",
 		"webpack": "^5.71.0",
 		"webpack-cli": "^4.9.2",
