--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"prettier": "^2.6.1",
 		"react-svg-loader": "^3.0.3",
 		"sass": "^1.49.11",
+		"sass-ffi": "^0.0.2",
 		"sass-loader": "^12.6.0",
 		"style-loader": "^3.3.1",
 		"stylelint": "^14.6.1",
