--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"dev": "cross-env webpack serve --open --mode=development",
 		"build:dev": "cross-env webpack --mode=development",
 		"build:prod": "cross-env webpack --mode=production",
+		"copy:prod": "cp -r ./dist/. ../../SGM/RenCred",
 		"lint": "eslint ./config/**/*.jsx  ./src ./src/**/*.jsx",
 		"lint:fix": "eslint ./config/**/*.jsx  ./src ./src/**/*.jsx --fix",
 		"stylelint": "stylelint ./src/**/*.scss",
