--- a/package.json
+++ b/package.json
@@ -77,12 +77,13 @@
 		"@babel/preset-env": "^7.16.11",
 		"@babel/preset-react": "^7.16.7",
 		"@reduxjs/toolkit": "^1.8.1",
+		"axios": "^1.1.2",
 		"babel-loader": "^8.2.4",
 		"classnames": "^2.3.1",
 		"history": "^5.3.0",
 		"lodash": "^4.17.21",
 		"prop-types": "^15.8.1",
-		"react": "^18.0.0",
+		"react": "^18.2.0",
 		"react-dom": "^18.0.0",
 		"react-hook-form": "^7.33.1",
 		"react-image": "^4.0.3",
