--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
 	"type": "module",
 	"scripts": {
 		"dev": "cross-env webpack serve --open --mode=development",
-		"build:dev": "cross-env webpack --mode=development",
-		"build:prod": "cross-env webpack --mode=production",
-		"copy:prod": "cp -r ./dist/. ../../SGM/RenCred",
+		"build:dev": "if [ -e dist ];then rm -r dist; fi && cross-env webpack --mode=development",
+		"build:prod": "if [ -e dist ];then rm -r dist; fi && cross-env webpack --mode=production && cp -r ./dist/. ../../SGM/RenCred",
 		"lint": "eslint ./config/**/*.jsx  ./src ./src/**/*.jsx",
 		"lint:fix": "eslint ./config/**/*.jsx  ./src ./src/**/*.jsx --fix",
 		"stylelint": "stylelint ./src/**/*.scss",
