--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
 		"@babel/plugin-syntax-jsx": "^7.16.7",
 		"@babel/preset-env": "^7.16.11",
 		"@babel/preset-react": "^7.16.7",
-		"@reduxjs/toolkit": "^1.8.1",
+		"@reduxjs/toolkit": "^1.8.6",
 		"axios": "^1.1.2",
 		"babel-loader": "^8.2.4",
 		"classnames": "^2.3.1",
@@ -86,6 +86,7 @@
 		"react-dom": "^18.0.0",
 		"react-hook-form": "^7.33.1",
 		"react-image": "^4.0.3",
+		"react-redux": "^8.0.4",
 		"react-responsive": "^9.0.0-beta.10",
 		"react-router-dom": "^6.3.0"
 	}
